--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- Your CSS -->
         <link type="text/css" rel="stylesheet" href="css/style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+
     </head>
 
     <body> 
+    <div class="space"></div>
+    <div id="start">
         <h1>My Playlist</h1>
         <div id="form">
             <p>Add a new song:</p>
@@ -19,6 +24,8 @@
             <input placeholder="Song Link Address" id="link">
             <button id="add">Add</button>
         </div>
+        </div>
+        <div class="space"></div>
         <div id="cart">
             <div class="column" id="images">
             
